--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background-color: red;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body .navbar {
+  height: 71px;
+  display: flex;
+  border-bottom: 1px solid lightgray;
 }/*# sourceMappingURL=style.css.map */
