--- a/style.scss
+++ b/style.scss
@@ -9,5 +9,56 @@ body {
 		height: 71px;
 		display: flex;
 		border-bottom: 1px solid lightgray;
+		justify-content: space-between;
+		align-items: center;
+		box-shadow: 0px 0px 10px rgb(233, 233, 233);
+
+		h5 {
+			margin: 20px;
+			font-size: 20px;
+			font-weight: 400;
+		}
+		.nav-links {
+			display: flex;
+			align-items: center;
+
+			ul li {
+				display: inline;
+				margin-right: 20px;
+
+				a {
+					text-decoration: none;
+					color: black;
+				}
+			}
+
+			button {
+				border: 1px solid rgb(0, 106, 255);
+				border-radius: 4px;
+				width: 80px;
+				height: 40px;
+				background-color: white;
+				font-size: 15px;
+				margin-right: 20px;
+			}
+		}
+	}
+
+	.pricing-header {
+		max-width: 700px;
+		text-align: center;
+		margin: 0 auto;
+
+		h1 {
+			font-size: 55px;
+			font-weight: 100;
+			margin-top: 70px;
+		}
+		p {
+			font-size: 20px;
+			margin: 20px 0;
+			line-height: 30px;
+			font-weight: 100;
+		}
 	}
 }
